--- a/templates/map.html
+++ b/templates/map.html
@@ -20,8 +20,8 @@
 	</div>
 
         <!-- Fichiers Javascript -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-	<script> src ='public/centres-vaccination.json'</script>
     <script type="text/javascript">
             // On initialise la latitude et la longitude de Paris (centre de la carte)
             var lat = 48.852969;
@@ -51,14 +51,20 @@
                 }).addTo(macarte);
             }
             function centre(){
-                var x = scene
+
+                $.getJSON("https://www.data.gouv.fr/fr/datasets/r/d0566522-604d-4af6-be44-a26eefa01756",function( data, textStatus, jqxhr ) {
+                    for(let i = 0 ; i < data.features.length ; i++){
+                        L.marker([data.features[i].geometry.coordinates[0][1],data.features[i].geometry.coordinates[0][0]],{title : 'X'}).addTo(macarte);
+                    }
+                });
             }
+
             window.onload = function(){
 		// Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
 		        initMap(); 
-                rayonIpssi();
-                var marker = L.marker([48.8485289,2.3861542],{title : 'Ipssi'}).addTo(macarte);
-              };
+                centre();
+                //rayonIpssi();
+            };
             
         </script>
     </body>
